--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build:watch": "webpack --watch"
     },
     "dependencies": {
-        "three": "^0.89.0"
+        "three": "^0.89.0",
+        "three-orbitcontrols": "^2.0.0"
     },
     "devDependencies": {
         "autoprefixer": "^6.6.1",
